fix: Enable hardware acceleration for blurred backgrounds in Safari
Blur filters are so slow in Safari that they are hardly useable. Enabling hardware acceleration by adding a 3d transform helps a ton.

--- a/app/javascript/scss/_mixins.scss
+++ b/app/javascript/scss/_mixins.scss
@@ -95,3 +95,11 @@
     }
   }
 }
+
+@mixin safari() {
+  @media not all and (min-resolution: 0.001dpcm) {
+    @supports (-webkit-appearance: none) {
+      @content;
+    }
+  }
+}
