--- a/app/javascript/scss/elements/_background-blur.scss
+++ b/app/javascript/scss/elements/_background-blur.scss
@@ -15,6 +15,10 @@
     transition: opacity 1000ms;
   }
 
+  @include safari() {
+    transform: scale(1.1) translate3d(0, 0, 0);
+  }
+
   &--visible {
     opacity: .25;
   }
