--- a/app/javascript/scss/elements/_card.scss
+++ b/app/javascript/scss/elements/_card.scss
@@ -197,6 +197,10 @@
     mask-image: linear-gradient(170deg, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 300px);
   }
 
+  @include safari() {
+    transform: translate3d(0, 0, 0);
+  }
+
   @media (prefers-reduced-motion) {
     display: none;
   }
