--- a/app/javascript/scss/elements/_profile.scss
+++ b/app/javascript/scss/elements/_profile.scss
@@ -203,6 +203,10 @@
   z-index: 0;
   overflow: hidden;
 
+  @include safari() {
+    transform: scale(1.1) translate3d(0, 0, 0);
+  }
+
   img {
     display: block;
     width: 100%;
